fix problems with recent maven versions (issue #7)